Changelog
=========

2.0b1
-----

- Prepend mail messages with \n to avoid interpretation of first
  line as a mail header. [smcmahon]

- Renamed label_contentrules_rule_enabled by
  label_contentrules_rule_enabled_question in manage-assignments.pt.
  It conflicted with label_contentrules_rule_enabled in 
  plone/app/contentrules/browser/templates/controlpanel.pt
  [vincentfretin]

- Don't include <q> tag in title_contentrules_assigned message.
  [vincentfretin]


2.0a1 - 2009-11-14
------------------

- Use zope.container and zope.browser in favor of zope.app dependencies.
  [hannosch]

- Change mailing send action to use "immediate=True" so that we can catch
  SMTPException. See note with code.
  [smcmahon]

- Fixed typo in manage-assignments.pt, so the disable button was not properly
  translated.
  [vincentfretin] 

- Log error rather than fail with exception on MailHostError in mail action.
  [smcmahon]

- Use plone.stringinterp for adaptable string substitution in mail action.
  Plip #9256.
  [smcmahon]

- Removed SecureMailHost dependency.
  [alecm]

- Adjusted some import statements to use the new zope.container.
  [hannosch]

1.1.7 - unreleased
------------------

- Fixed untranslatable content types in @@manage-content-rules. This closes
  http://dev.plone.org/plone/ticket/9778
  [vincenfretin]

- Fixed some duplicated msgids with different defaults.
  There is no new strings to translate.
  See http://dev.plone.org/plone/ticket/9633
  [vincenfretin]


1.1.6 - May 16, 2009
--------------------

- Add check to see if getTypeInfo can be None (which is a valid value)
  [tesdal]

- Changed the simplepublish test to use a copy instead of a move action.
  The move action causes the content item to be moved away while editing
  it and causes a NotFound error. In Plone 3 this is hidden by the
  customized NotFound handling.
  [hannosch]

- Fixed GenericSetup tests layer to not pollute the general test
  environment.
  [hannosch]
