@@ -22,6 +22,7 @@ setup(name='plone.app.contentrules',
       zip_safe=False,
       install_requires=[
         'setuptools',
+        'kss.core',
         'plone.contentrules',
         'plone.memoize',
         'plone.stringinterp',
@@ -29,6 +30,7 @@ setup(name='plone.app.contentrules',
         'plone.app.kss',
         'plone.app.vocabularies',
         'transaction',
+        'zope.annotation',
         'zope.browser',
         'zope.component',
         'zope.container',
@@ -40,13 +42,14 @@ setup(name='plone.app.contentrules',
         'zope.publisher',
         'zope.schema',
         'zope.site',
-        'zope.thread',
+        'zope.traversing',
         'zope.app.publication',
         'Acquisition',
         'Plone',
         'Products.Archetypes',
         'Products.ATContentTypes',
         'Products.CMFCore',
+        'Products.CMFDefault',
         'Products.GenericSetup',
         'Products.statusmessages',
         'ZODB3',
