@@ -4,6 +4,10 @@ Changelog
 2.0b1
 -----
 
+- Declare package dependencies and replace zope.thread by the standard
+  libraries threading module.
+  [hannosch]
+
 - Prepend mail messages with \n to avoid interpretation of first
   line as a mail header. [smcmahon]
 
